public/lite/api/en/r1.7/_sources/generate/program_listing_file_include_core_ops_skip_gram.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_core_ops_skip_gram.h:

Program Listing for File skip_gram.h
====================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_core_ops_skip_gram.h>` (``include/core/ops/skip_gram.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef MINDSPORE_CORE_OPS_SKIP_GRAM_H_
   #define MINDSPORE_CORE_OPS_SKIP_GRAM_H_
   
   #include <map>
   #include <vector>
   #include <string>
   #include <memory>
   #include <algorithm>
   
   #include "ops/base_operator.h"
   #include "mindapi/base/types.h"
   
   namespace mindspore {
   namespace ops {
   constexpr auto kNameSkipGram = "SkipGram";
   class MIND_API SkipGram : public BaseOperator {
    public:
     MIND_API_BASE_MEMBER(SkipGram);
     SkipGram() : BaseOperator(kNameSkipGram) {}
   
     void Init(const bool include_all_grams, const int64_t max_skip_size, const int64_t ngram_size);
   
     void set_include_all_grams(const bool include_all_grams);
   
     bool get_include_all_grams() const;
   
     void set_max_skip_size(const int64_t max_skip_size);
   
     int64_t get_max_skip_size() const;
   
     void set_ngram_size(const int64_t ngram_size);
   
     int64_t get_ngram_size() const;
   };
   abstract::AbstractBasePtr SkipGramInfer(const abstract::AnalysisEnginePtr &, const PrimitivePtr &primitive,
                                           const std::vector<abstract::AbstractBasePtr> &input_args);
   }  // namespace ops
   }  // namespace mindspore
   
   #endif  // MINDSPORE_CORE_OPS_SKIP_GRAM_H_
